--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,35 +5,24 @@ edition = "2021"
 
 [dependencies]
 # Web framework
-axum = "0.7"
+axum = "0.8.7"
 tokio = { version = "1", features = ["full"] }
-tower = "0.4"
-tower-http = { version = "0.5", features = ["cors", "trace"] }
-
-# Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_urlencoded = "0.7"
+reqwest = { version = "0.12.24", features = ["json"] }
 
-# HTTP client
-reqwest = { version = "0.11", features = ["json"] }
-
-# Utilities
-thiserror = "1.0"
+thiserror = "2.0.17"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-url = "2.5"
 chrono = { version = "0.4", features = ["serde"] }
 
-# Random generation for CSRF state
-rand = "0.8"
-
-# Environment variables
 dotenvy = "0.15"
-log = "0.4.28"
-urlencoding = "2.1.3"
 
 # Cryptography for API signing
 hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
+
+# Database
+rusqlite = { version = "0.37.0", features = ["bundled"] }
+tokio-rusqlite = "0.7.0"
