--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ TIKTOK_REDIRECT_URI=http://localhost:3000/auth/callback
 # Server Configuration
 HOST=127.0.0.1
 PORT=3000
+WOW_API_BASE_URL=https://api.wowesim.com/
+TIKTOK_SHOP_CIPHER=
+TIKTOK_SHOP_ID=
+TIKTOK_TOKEN_FILE=token.json
+WOW_SECRET=
