--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tiktok-shop-oauth"
+name = "tiktok-shop-order"
 version = "0.1.0"
 edition = "2021"
 
@@ -24,6 +24,4 @@ sha2 = "0.10"
 hex = "0.4"
 
 # Database
-rusqlite = { version = "0.37.0", features = ["bundled"] }
-tokio-rusqlite = "0.7.0"
-log = "0.4.28"
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
